rootskel (1.15) UNRELEASED; urgency=low

  * Colin Watson
    - Cope with non-devfs path to framebuffer device (/dev/fb0).
    - Support init= boot parameter in initramfs.
  * Joey Hess
    - Remove unused /floppy entry from fstab.
    - Move env2debconf command to di-utils (1.10) in a vain attempt to make
      this package a little bit more of a skeleton again.
    - Add a TODO file with my ideas of what needs to be done with this
      package.
    - debian-installer/kernel/commandline moved to s390-dasd (0.0.11) since
      it's only used on s390. Upload s390-dasd when uploading this package.
    - Remove debian-installer/kernel/subarchitecture template, everything
      uses the archdetect command now.

 -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 23:29:32 +0100

rootskel (1.14) unstable; urgency=low

  * Matt Zimmerman
    - Add a 'restart' action to the default inittab which re-execs init on
      receipt of SIGHUP or SIGUSR1. Useful when building a live-CD-style
      system where you want to switch to a different init part-way through.

 -- Colin Watson <cjwatson@debian.org>  Fri,  6 May 2005 12:49:27 +0100

rootskel (1.13) unstable; urgency=low

  * Joey Hess
    - Add (untested) support for calling udevstart in /init for initramfs.
    - Re-add devfs mount code to boot floppy init, so the boot parameter
      is not needed.
  * Colin Watson
    - Add optional support for hotplug, ported over from Ubuntu.

 -- Joey Hess <joeyh@debian.org>  Wed,  4 May 2005 14:06:55 -0400

rootskel (1.12) unstable; urgency=low

  NOTE: not for sarge, needs base-installer 1.14 and is generally scary.
  * Joey Hess
    - Backed off changes from 1.10 regarding ia64 keyboard modules,
      since they're built back into the kernel now for 2.6 and 2.4.
    - Removed psmouse register-module code for ia64 and powerpc, moving this
      back to ddetect.
    - Add a simple /init to support initramfs images. At least for now,