@@ -2,6 +2,10 @@ dir = lib/debian-installer
 
 DEB_HOST_GNU_CPU    ?= $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
 DEB_HOST_GNU_SYSTEM ?= $(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM)
+ifeq ($(DEB_HOST_GNU_SYSTEM),linux)
+# Take account of old dpkg-architecture output.
+DEB_HOST_GNU_SYSTEM := linux-gnu
+endif
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 
 files_exec = \
@@ -11,7 +15,7 @@ files_exec = \
 	init-udev-devices \
 	menu
 
-ifeq ($(DEB_HOST_GNU_SYSTEM),linux)
+ifeq ($(DEB_HOST_GNU_SYSTEM),linux-gnu)
   ifeq ($(DEB_HOST_GNU_CPU),s390)
     files += \
 	detect-console:detect-console-linux-s390
