@@ -3,6 +3,9 @@ rootskel (1.15) UNRELEASED; urgency=low
   * Colin Watson
     - Cope with non-devfs path to framebuffer device (/dev/fb0).
     - Support init= boot parameter in initramfs.
+    - dpkg-architecture >= 1.13.2 says DEB_HOST_GNU_SYSTEM is "linux-gnu",
+      not "linux". Take account of this, and add compatibility code for old
+      dpkg-architecture.
   * Joey Hess
     - Remove unused /floppy entry from fstab.
     - Move env2debconf command to di-utils (1.10) in a vain attempt to make
